--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@samchon/npm-dependents",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Download counter of NPM dependents",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "build": "rimraf lib && tsc",
-    "dev": "npm run build -- --watch"
+    "dev": "npm run build -- --watch",
+    "start": "node lib/executable/dependents"
   },
   "keywords": ["npm", "dependents", "download", "count"],
   "author": "Jeongho Nam",
